umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_pr+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Pr#c+3#u2"} :bonds [] :charge 3 :spin "#u2 #s3"}} :counts {:success true :output {:atoms {"0" "Pr#c+3#n"} :bonds [] :charge 3 :spin "#u0 #s1"}}}
