umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_pu+4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Pu#c+4#u4"} :bonds [] :charge 4 :spin "#u4 #s5"}} :counts {:success true :output {:atoms {"0" "Pu#c+4#n2"} :bonds [] :charge 4 :spin "#u0 #s1"}}}
